kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: wiz-exercise
  labels:
    app: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
